--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/cellularatomaton/cryptfolio#readme",
   "dependencies": {
     "argparse": "^1.0.9",
-    "cheerio": "^1.0.0-rc.2"
+    "cheerio": "^1.0.0-rc.2",
+    "express": "^4.16.2"
   }
 }
